--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -335,7 +335,7 @@
     command: swapoff -a
     changed_when: false
 
-  - name: Download kube-proxy 1.15.4 binary # Remove after network issue with 1.16 is resolved. Using curl as get_url gave protocol error (most likely caused by internal webproxy)
+  - name: Download kubernetes proxy 1.15.4 binary # Remove after network issue with 1.16 is resolved.
     environment: "{{ proxy_env }}"
     shell: curl -L --insecure https://dl.k8s.io/v{{ kube-proxy_version }}/kubernetes-node-linux-amd64.tar.gz | \
            tar xzf - -C /tmp kubernetes/node/bin/kube-proxy && \
