--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -337,11 +337,11 @@
 
   - name: Download kubernetes proxy 1.15.4 binary # Remove after network issue with 1.16 is resolved.
     environment: "{{ proxy_env }}"
-    shell: curl -L --insecure https://dl.k8s.io/v{{ kube-proxy_version }}/kubernetes-node-linux-amd64.tar.gz | \
+    shell: curl -L --insecure https://dl.k8s.io/v{{ kube_proxy_version }}/kubernetes-node-linux-amd64.tar.gz | \
            tar xzf - -C /tmp kubernetes/node/bin/kube-proxy && \
-           mv /tmp/kubernetes/node/bin/kube-proxy {{ install_dir }}/bin/kube-proxy-{{ kube-proxy_version }}
+           mv /tmp/kubernetes/node/bin/kube-proxy {{ install_dir }}/bin/kube-proxy-{{ kube_proxy_version }}
     args:
-      creates: "{{ install_dir }}/bin/kube-proxy-{{ kube-proxy_version }}"
+      creates: "{{ install_dir }}/bin/kube-proxy-{{ kube_proxy_version }}"
 
   - name: Download kubernetes node binaries # using curl as get_url gave protocol error (most likely caused by internal webproxy)
     environment: "{{ proxy_env }}"
