--- a/files/roles/clusterrolebindings.yaml
+++ b/files/roles/clusterrolebindings.yaml
@@ -1,5 +1,4 @@
 ---
-# aura group
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -13,6 +12,11 @@ roleRef:
   kind: ClusterRole
   name: cluster-admin
 subjects:
+# aura group
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
   name: df17de8a-e293-4253-96f3-46544e57cc5a
+# naisflow
+- apiGroup: rbac.authorization.k8s.io
+  kind: Group
+  name: d980f6eb-9ad0-4f6d-8337-64945032aa6f
