--- a/roles/prometheus/templates/alerts.yml
+++ b/roles/prometheus/templates/alerts.yml
@@ -8,7 +8,7 @@ groups:
       alert: nais-alerts
       cluster: {{ cluster_name }}
     annotations:
-      description: {{ "'<!subteam^SB8KS4WAV|nais-vakt> <!here> Prometheus is running low on disk space on {{ $labels.mountpoint }} on " }}{{ inventory_hostname }}{{ ", predicted empty in less than 3 days'" }}
+      description: {{ "'<!here> Prometheus is running low on disk space on {{ $labels.mountpoint }} on " }}{{ inventory_hostname }}{{ ", predicted empty in less than 3 days'" }}
       action: "Cleanup / increase disk size / adjust retention / check for applications having an excessive number of metrics"
   - alert: PrometheusDiskUsagePercent
     expr: '100 * node_filesystem_avail_bytes{instance="{{ inventory_hostname }}:9101"} / node_filesystem_size_bytes{instance="{{ inventory_hostname }}:9101"} < 5'
