--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -638,6 +638,16 @@
       loop: "{{ node_labels|default([]) }}"
       changed_when: false
 
+- hosts: workers:!ceph_nodes
+  user: "{{ remote_user }}"
+  become: yes
+  tasks:
+    - name: Setup node labels
+      command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf --overwrite=true label nodes {{ inventory_hostname }} {{ item }}"
+      loop:
+        - nais.io/type=worker
+      changed_when: false
+
 - hosts: masters
   user: "{{ remote_user }}"
   become: yes
