--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -635,7 +635,7 @@
 
     - name: Setup node labels
       command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf --overwrite=true label nodes {{ inventory_hostname }} {{ item }}"
-      loop: "{{ node_labels|default([]) }}"
+      loop: "{{ extra_node_labels|default([]) }}"
       changed_when: false
 
 - hosts: masters
