--- a/roles/prometheus/templates/prometheus.service
+++ b/roles/prometheus/templates/prometheus.service
@@ -3,6 +3,7 @@ Description=Prometheus
 
 [Service]
 User=prometheus
+LimitNOFILE=50000
 ExecReload=/bin/kill -HUP $MAINPID
 ExecStart=/opt/prometheus/prometheus --config.file /opt/prometheus/prometheus.yml --storage.tsdb.path=/data/prometheus --storage.tsdb.retention.time={{ prometheus_retention }} --query.timeout={{ prometheus.query.timeout }} --query.max-samples={{ prometheus.query.max_samples }}
 Restart=always
