--- a/roles/prometheus/templates/alerts.yml
+++ b/roles/prometheus/templates/alerts.yml
@@ -11,7 +11,7 @@ groups:
       description: {{ "'<!here> Prometheus is running low on disk space on {{ $labels.mountpoint }} on " }}{{ inventory_hostname }}{{ ", predicted empty in less than 3 days'" }}
       action: "Cleanup / increase disk size / adjust retention / check for applications having an excessive number of metrics"
   - alert: PrometheusDiskUsagePercent
-    expr: '100 * node_filesystem_avail_bytes{instance="{{ inventory_hostname }}:9101"} / node_filesystem_size_bytes{instance="{{ inventory_hostname }}:9101"} < 5'
+    expr: '100 * node_filesystem_avail_bytes{instance="{{ inventory_hostname }}:9101",mountpoint!="/usr"} / node_filesystem_size_bytes{instance="{{ inventory_hostname }}:9101"} < 5'
     for: 5m
     labels:
       alert: nais-alerts
