--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -7,7 +7,7 @@
   pre_tasks:
   - name: Copy python interpreter to server
     delegate_to: localhost
-    command: "scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null {{ lookup('env', 'SSH_OPTS') }} files/pypy2.7-v7.3.1-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/"
+    command: "scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes {{ lookup('env', 'SSH_OPTS') }} files/pypy2.7-v7.3.1-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/"
     changed_when: false
 
 - hosts: localhost
