--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -243,6 +243,7 @@
     template:
       src: files/mk-docker-opts.sh
       dest: "{{ install_dir }}/libexec/mk-docker-opts.sh"
+      mode: 0755
 
   - name: Copy flannel service file
     template:
