--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -44,7 +44,7 @@ scrape_configs:
         labels:
           node_type: worker
       - targets:
-{% for host in groups['ceph_nodes' | intersect(groups['ceph_daemon_nodes']) %}
+{% for host in groups['ceph_nodes'] | intersect(groups['ceph_daemon_nodes']) %}
         - '{{ host }}:9101'
 {% endfor %}
         labels:
@@ -89,7 +89,7 @@ scrape_configs:
     static_configs:
       - targets:
 {% for host in groups['workers'] %}
-{% if not host in groups['ceph_nodes' | intersect(groups['ceph_daemon_nodes']) %}
+{% if not host in groups['ceph_nodes'] | intersect(groups['ceph_daemon_nodes']) %}
         - '{{ host }}:8080'
 {% endif %}
 {% endfor %}
