federate slo job

--- a/roles/prometheus/vars/main.yaml
+++ b/roles/prometheus/vars/main.yaml
@@ -19,6 +19,7 @@ prometheus_jobs:
   - blackbox-exporter-tls-certificates
   - blackbox-exporter-tls-certificates-traefik
   - jenkins
+  - slo
 
 prometheus_nais_namespaces:
   - nais
