Revert "skip wait on flannel"
This reverts commit ea3a086a7f8b7e60db6854aa14a1b72c8142edbc.

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -272,13 +272,13 @@
       path: /var/lib/docker/docker_opts.env
       state: absent
 
-  # - name: Wait for flannel to write subnet and mtu values
-  #   wait_for:
-  #     path: /run/flannel/subnet.env
-  #     state: present
-  #     timeout: 60
-  #     search_regex: FLANNEL_SUBNET
-  #     msg: Timeout waiting for flannel to write subnet and mtu values
+  - name: Wait for flannel to write subnet and mtu values
+    wait_for:
+      path: /run/flannel/subnet.env
+      state: present
+      timeout: 60
+      search_regex: FLANNEL_SUBNET
+      msg: Timeout waiting for flannel to write subnet and mtu values
 
   - name: Make flannel configuration for docker
     command: "{{ install_dir }}/libexec/mk-docker-opts.sh -k DOCKER_OPTS -f /run/flannel/subnet.env -d /var/lib/docker/docker_opts.env"
