--- a/files/docker.service
+++ b/files/docker.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Docker Application Container Engine
 Documentation=http://docs.docker.com
+After=flannel.service
 
 [Service]
 EnvironmentFile=/var/lib/docker/docker_opts.env
