feat: bruker flanneld i stedet for nais.flannel

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -242,23 +242,39 @@
     notify:
       - restart_flannel
 
-  - name: Copy mk-docker-opts file
-    template:
-      src: files/mk-docker-opts.sh
-      dest: "{{ install_dir }}/libexec/mk-docker-opts.sh"
-      mode: 0755
+  - name: Ensure delete mk-docker-opts file
+    file:
+      path: "{{ install_dir }}/libexec/mk-docker-opts.sh"
+      state: absent
 
-  - name: Copy flannel service file
+  - name: Delete custom nais flannel
+    file:
+      path: /etc/systemd/system/flannel.service
+      state: absent
+
+  - name: Ensure flanneld.service.d exists
+    file:
+      path: /etc/systemd/system/flanneld.service.d/
+      state: directory
+
+  - name: Copy flanneld.service.d opt-file
     template:
-      src: templates/flannel.service.j2
-      dest: /etc/systemd/system/flannel.service
+      src: templates/flanneld.service.d/etcd.conf
+      dest: /etc/systemd/system/flanneld.service.d/etcd.conf
     notify:
       - restart_flannel
 
-  - name: Enable flannel
+  - name: Disable flannel
     systemd:
       daemon_reload: yes
       name: flannel.service
+      state: stopped
+      enabled: no
+
+  - name: Enable flanneld
+    systemd:
+      daemon_reload: yes
+      name: flanneld.service
       state: started
       enabled: yes
 
@@ -271,18 +287,6 @@
     file:
       path: /var/lib/docker/docker_opts.env
       state: absent
-
-  - name: Wait for flannel to write subnet and mtu values
-    wait_for:
-      path: /run/flannel/subnet.env
-      state: present
-      timeout: 60
-      search_regex: FLANNEL_SUBNET
-      msg: Timeout waiting for flannel to write subnet and mtu values
-
-  - name: Make flannel configuration for docker
-    command: "{{ install_dir }}/libexec/mk-docker-opts.sh -k DOCKER_OPTS -f /run/flannel/subnet.env -d /var/lib/docker/docker_opts.env"
-    changed_when: false
 
   - name: Copy docker service file
     copy:
