fix: lagt til GODEBUG-variabel

--- a/templates/flanneld.service.d/etcd.conf
+++ b/templates/flanneld.service.d/etcd.conf
@@ -4,4 +4,5 @@
 {% endfor -%}
 
 [Service]
+Environment=GODEBUG=netdns=go
 Environment="FLANNEL_OPTS=--ip-masq=true --etcd-endpoints={{ etcd_urls | join(",") }} --etcd-prefix=/nais/network --etcd-cafile=/etc/ssl/certs/ca.pem --etcd-certfile=/etc/ssl/certs/etcd-client.pem --etcd-keyfile=/etc/ssl/certs/etcd-client-key.pem"
