create certificate for custom metrics prometheus adapter

--- a/roles/fetch_existing_certificates/tasks/main.yml
+++ b/roles/fetch_existing_certificates/tasks/main.yml
@@ -17,6 +17,8 @@
     - kube-proxy-key.pem
     - prometheus-adapter.pem
     - prometheus-adapter-key.pem
+    - prometheus-adapter-custom-metrics.pem
+    - prometheus-adapter-custom-metrics-key.pem
   vars:
     src_path: /etc/kubernetes/pki
     dest_path: target/pki
