--- a/roles/create_certificates/tasks/main.yml
+++ b/roles/create_certificates/tasks/main.yml
@@ -68,6 +68,11 @@
   args:
     creates: target/pki/prometheus-adapter.pem
 
+- name: Creating prometheus-adapter-custom-metrics certificate
+  shell: bin/cfssl gencert -ca=target/pki/front-proxy-ca.pem -ca-key=target/pki/front-proxy-ca-key.pem -config=target/pki/ca-config.json -profile=peer {{ role_path }}/files/prometheus-adapter-custom-metrics-csr.json | bin/cfssljson -bare target/pki/prometheus-adapter-custom-metrics
+  args:
+    creates: target/pki/prometheus-adapter-custom-metrics.pem
+
 - name: Creating etcd certificate
   shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/server
   args:
