--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -209,6 +209,8 @@
       - kube-proxy-key.pem
       - prometheus-adapter.pem
       - prometheus-adapter-key.pem
+      - prometheus-adapter-custom-metrics.pem
+      - prometheus-adapter-custom-metrics-key.pem
       - sa.key
       - sa.pub
 
