create k8s secret with custom-metrics certificate

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -637,6 +637,7 @@
     loop:
       - core-dns.yaml
       - prometheus-adapter.yaml
+      - prometheus-adapter-custom-metrics.yaml
       - namespaces.yaml
       - debug.yaml
 
