--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -22,6 +22,7 @@ scrape_configs:
     - targets: ['localhost:9090']
 
   - job_name: 'nodes'
+    scrape_interval: 5s
     static_configs:
       - targets:
 {% for host in groups['prometheus'] %}
