use nais-team-app instead of srvnais PAT
more info: https://github.com/apps/nais-team-app

i should have added the necessary secrets (`NAIS_APP_PRIVATE_KEY`, and `NAIS_APP_ID`), but it's probably smart to have a look at the [repository secrets](../settings/secrets/actions) and verify their existence before merging this.

i'm not really sure if this will work (this is the first repo i've encountered that uses repo dispatches), but the application should have permissions to send such events.

--- a/.github/workflows/trigger.yaml
+++ b/.github/workflows/trigger.yaml
@@ -9,11 +9,17 @@ jobs:
     name: Trigger nsync
     runs-on: ubuntu-latest
     steps:
+      - uses: navikt/github-app-token-generator@v1
+        id: get-token
+        with:
+          private-key: ${{ secrets.NAIS_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.NAIS_APP_ID }}
+          repo: navikt/nsync
       - name: Dispatch event
         run: |
           curl \
           -X POST \
-          -u "srvnais:${{secrets.SRVNAIS_REPO_PUSH_PAT}}" \
+          -u "${{ secrets.NAIS_APP_ID }}:${{ steps.get-token.outputs.token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/navikt/nsync/dispatches \
           -d '{"event_type":"trigger"}'
