--- a/templates/flanneld.service.d/etcd.conf
+++ b/templates/flanneld.service.d/etcd.conf
@@ -5,8 +5,13 @@
 
 [Service]
 Environment=GODEBUG=netdns=go
-Environment="FLANNELD_ETCD_ENDPOINTS={{ etcd_urls | join(",") }}"
-Environment="FLANNELD_ETCD_PREFIX=/nais/network"
-Environment="FLANNELD_ETCD_CAFILE=/etc/ssl/certs/ca.pem"
-Environment="FLANNELD_ETCD_CERTFILE=/etc/ssl/certs/etcd-client.pem"
-Environment="FLANNELD_ETCD_KEYFILE=/etc/ssl/certs/etcd-client-key.pem"
+Environment="FLANNEL_IMAGE_TAG=v0.14.0"
+Environment="FLANNELD_KUBE_API_URL=https://b27apvl00534.preprod.local:6443"
+Environment="FLANNELD_KUBE_SUBNET_MGR=true"
+Environment="FLANNELD_IP_MASQ=true"
+Environment="FLANNELD_IFACE=ens192"
+Environment="NODE_NAME={{ inventory_hostname }}"
+# flannel-wrapper script only support mounting ETCD_SSL_DIR, use this to mount dir with kube-config
+Environment="ETCD_SSL_DIR=/etc/kubernetes"
+Environment="FLANNELD_KUBECONFIG_FILE=/etc/kubernetes/kubeconfigs/kubelet.conf"
+Environment="FLANNELD_NET_CONFIG_PATH=/etc/kubernetes/flannel/net-conf.json"
