use localhost for api server on master

--- a/templates/flanneld.service.d/flannel_opts.conf
+++ b/templates/flanneld.service.d/flannel_opts.conf
@@ -1,6 +1,10 @@
 [Service]
 Environment=GODEBUG=netdns=go
-Environment="FLANNELD_KUBE_API_URL=https://b27apvl00534.preprod.local:6443"
+{% if inventory_hostname == (groups.masters|first) %}
+Environment="FLANNELD_KUBE_API_URL=http://127.0.0.1:8080"
+{% else %}
+Environment="FLANNELD_KUBE_API_URL=https://{{ groups.masters|first }}:6443"
+{% endif %}
 Environment="FLANNELD_KUBE_SUBNET_MGR=true"
 Environment="FLANNELD_IP_MASQ=true"
 Environment="FLANNELD_IFACE=ens192"
